--- a/vmware/samples/vcenter/vm/hardware/EthernetConfiguration/EthernetConfiguration.csproj
+++ b/vmware/samples/vcenter/vm/hardware/EthernetConfiguration/EthernetConfiguration.csproj
@@ -34,8 +34,8 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="CommandLine, Version=1.9.71.2, Culture=neutral, PublicKeyToken=de6f01bd326f8c32, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\..\..\..\packages\CommandLineParser.1.9.71\lib\net45\CommandLine.dll</HintPath>
+      <Private>True</Private>
     </Reference>
     <Reference Include="System" />
     <Reference Include="vapi-client-bindings-6.5.0, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
@@ -66,6 +66,9 @@
       <Project>{1acd25a4-62ea-4b6f-a1df-6f1a531bbf4b}</Project>
       <Name>SamplesCommon</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
